# dock

./: CMakeLists.txt
debian/: control
qml/: AppItem.qml  DockItem.qml  main.qml
src/: activity.cpp  fakewindow.cpp  main.cpp  mainwindow.cpp  systemappmonitor.cpp  xwindowinterface.cpp  xwindowinterface.h
